# agent-basics

./: .gitignore  main.py  pyproject.toml
src/hf-agents/smolagent-basics/: cust-term.py  demo.py  multi-agent.py  telemetry-langfuse-demo.py
src/hf-agents/smolagents-security/: sec-custom-exec-demo.py
src/hf-agents/smolagents-security/docker-sandbox/: docker-demo.py  docker-full-sandbox.py
src/hf-agents/smolagents-tools/: mcp-demo-alternative.py  mcp-demo-local-transformer.py  mcp-demo.py
src/hf-agents/smolagents-tools/image-gen-demo.py/: image-gen-standalone.py
src/hf-agents/smolagents-tools/langchain-tools/: langchain-tool-demo.py
src/hf-agents/smolagents-tools/weather-demo/: mcp-demo-struct.py  weather.py
src/hf-agents/unit01/scratch/: dummy-agent.py  system-prompt.txt  tools-example.py
src/hf-agents/unit01/smolagent-guided-tour/: demo.py  gradio-demo.py  hf-model-list.py  telemetry-phoenix-demo.py  web-search-stanalone.py
