[project]
name = "agent-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.35.1",
    "langfuse>=3.5.1",
    "mcp>=1.15.0",
    "smolagents[gradio,litellm,mcp,telemetry,toolkit,transformers]>=1.22.0",
    "sympy>=1.14.0",
]
