[project]
name = "agent-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-search>=1.1.1",
    "google-search-results>=2.4.2",
    "huggingface-hub>=0.35.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langfuse>=3.5.1",
    "mcp>=1.15.0",
    "pydantic>=2.11.9",
    "smolagents[gradio,litellm,mcp,telemetry,toolkit,transformers]>=1.22.0",
    "sympy>=1.14.0",
]
